--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -1,1 +1,197 @@
-body {}
+@import './reset.scss';
+@import './vars.scss';
+
+:root {
+  --primary: #5aa50f;
+  --secondary: #c3e6be;
+  --fDark: #2b2222;
+  --fLight: #ffffff;
+  --accent: #e5f18e;
+  --greenLight: #c3e6be;
+}
+
+html {
+  line-height: 1.375;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  color: var(--fDark);
+  font-size: 16px;
+}
+
+h2,
+.h2 {
+  font-weight: 700;
+  font-size: 32px;
+  color: var(--fDark);
+}
+
+.h3 {
+  font-weight: 600;
+  font-size: 20px;
+  color: var(--fDark);
+}
+
+.wrapper {
+  max-width: 1280px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin: 0 auto;
+
+  @include screen($lg) {
+    max-width: 1100px;
+  }
+
+  @include screen($md) {
+    max-width: 960px;
+  }
+
+  @include screen($sm) {
+    max-width: 720px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  @include screen($xs) {
+    max-width: 640px;
+  }
+}
+
+.fields {
+  padding-left: 70px;
+  padding-right: 70px;
+
+  @include screen($md) {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
+
+.button-green {
+  background: var(--primary);
+  border-radius: 0 50px 0 50px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.counter {
+  background: var(--accent);
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  padding: 15px 25px;
+
+  &--pb-25 {
+    padding-bottom: 25px;
+  }
+
+  &--pb-18 {
+    padding-bottom: 18px;
+  }
+
+  &__title {
+    color: #655a5a;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 27px;
+    margin-bottom: 13px;
+  }
+
+  &__caption {
+    margin-top: 15px;
+    font-size: 20px;
+    line-height: 27px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--primary);
+  }
+
+  &__cells {
+    display: flex;
+  }
+
+  &__cell {
+    width: 58px;
+    height: 55px;
+    background: var(--fLight);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    text-align: center;
+
+    & + & {
+      margin-left: 10px;
+    }
+  }
+
+  &__value {
+    font-weight: 700;
+    font-size: 32px;
+    color: #655a5a;
+    line-height: 55px;
+
+    &--xs-small {
+      @include screen($xs) {
+        font-size: 24px;
+      }
+    }
+
+    &--active {
+      color: var(--primary);
+    }
+  }
+}
+
+.a-between {
+  justify-content: space-between;
+}
+
+.a-grow {
+  flex-grow: 1;
+}
+
+.a-items-center {
+  align-items: center;
+}
+
+.a-mb-20 {
+  margin-bottom: 20px;
+}
+
+.a-mb-30 {
+  margin-bottom: 30px;
+}
+
+.a-mb-40 {
+  margin-bottom: 50px;
+}
+
+.a-mb-50 {
+  margin-bottom: 50px;
+}
+
+.a-mb-60 {
+  margin-bottom: 60px;
+}
+
+.a-mb-120 {
+  margin-bottom: 120px;
+}
+
+.a-text-center {
+  text-align: center;
+}
+
+.a-text-semiBold {
+  font-weight: 600;
+}
+
+.a-text-bold {
+  font-weight: 700;
+}
+
+.a-text-primary {
+  color: var(--primary);
+}
