--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -79,10 +79,14 @@ h2,
 }
 
 .counter {
-  background: var(--accent);
+  background: rgba(229, 241, 142, 0.6);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 15px 25px;
+
+  @include screen($md) {
+    background: var(--accent);
+  }
 
   &--pb-25 {
     padding-bottom: 25px;
